[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Sprites/moveTrackersEnabled.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/army.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/portraitButtonIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/portraitsSheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/TileResources/interactable.tres" type="TileSet" id=5]
[ext_resource path="res://Assets/TileResources/TMProps.tres" type="TileSet" id=6]
[ext_resource path="res://Assets/TileResources/TMGround.tres" type="TileSet" id=7]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=8]
[ext_resource path="res://Scripts/mapCreator.gd" type="Script" id=9]
[ext_resource path="res://Scripts/MouseCtrl.gd" type="Script" id=10]
[ext_resource path="res://Scripts/TM-Ground.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Army.gd" type="Script" id=12]
[ext_resource path="res://Scripts/TM-Movement.gd" type="Script" id=13]
[ext_resource path="res://Scripts/TM-Props.gd" type="Script" id=14]
[ext_resource path="res://Scripts/ArmyButton.gd" type="Script" id=15]
[ext_resource path="res://Scripts/AdventureMap.gd" type="Script" id=16]
[ext_resource path="res://Scenes/AdventureEvent.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scripts/EventCtrl.gd" type="Script" id=18]
[ext_resource path="res://Scripts/TurnPanel.gd" type="Script" id=19]
[ext_resource path="res://Assets/Sprites/moveTrackersDisabled.png" type="Texture" id=20]
[ext_resource path="res://Scripts/MovementTracker.gd" type="Script" id=21]
[ext_resource path="res://Scripts/Container.gd" type="Script" id=22]
[ext_resource path="res://Assets/Sprites/townsSheet.png" type="Texture" id=23]
[ext_resource path="res://Scripts/TownButton.gd" type="Script" id=24]
[ext_resource path="res://Assets/Sprites/unitsSheet.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/menuIcon.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/goldIcon.png" type="Texture" id=27]
[ext_resource path="res://Scripts/topPanel.gd" type="Script" id=28]
[ext_resource path="res://Scenes/NewDayEvent.tscn" type="PackedScene" id=29]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 144, 72 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 144, 72 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 144, 72 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AdventureMap" type="Node2D"]
script = ExtResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="TM-Ground" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 144, 72 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 3, 0, 131075, 4, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 1, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 4, 0, 196611, 4, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 4, 0, 262147, 4, 0, 262148, 0, 0, 262149, 0, 0, 262150, 3, 0, 262151, 3, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 4, 0, 327683, 4, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 2, 0, 327691, 2, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 6, 0, 655371, 6, 0, 655372, 0, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 0, 0, 720905, 0, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 786432, 4, 0, 786433, 4, 0, 786434, 1, 0, 786435, 4, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 5, 0, 851983, 5, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 5, 0, 917519, 5, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 5, 0, 983055, 5, 0 )
script = ExtResource( 11 )

[node name="TM-Props" type="TileMap" parent="."]
position = Vector2( 3.05176e-05, -0.00253749 )
mode = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 144, 72 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( 131077, 4, 0, 393219, 6, 0, 393221, 5, 0, 393223, 7, 0, 589831, 3, 0 )
script = ExtResource( 14 )

[node name="TM-Movement" type="TileMap" parent="."]
visible = false
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 144, 72 )
cell_tile_origin = 1
centered_textures = true
format = 1
script = ExtResource( 13 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="saveMapName" type="LineEdit" parent="UI"]
visible = false
anchor_left = 0.307
anchor_top = 0.76
anchor_right = 0.465
anchor_bottom = 0.807
margin_left = 0.114532
margin_top = 0.0166626
margin_right = -0.684998
margin_bottom = -0.283325
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="Panel" parent="UI"]
anchor_left = 0.017
anchor_top = 0.89
anchor_right = 0.138
anchor_bottom = 0.982
margin_left = 0.799999
margin_top = -6.10352e-05
margin_right = 0.199982
margin_bottom = 0.199951
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="UI/InfoPanel"]
anchor_left = 0.093
anchor_top = 0.193
anchor_right = 0.907
anchor_bottom = 0.855
margin_left = 0.0509987
margin_top = -0.019001
margin_right = -0.0510101
margin_bottom = 0.034996
text = "Test
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanel" type="Panel" parent="UI"]
anchor_left = 0.862
anchor_top = 0.89
anchor_right = 0.983
anchor_bottom = 0.982
margin_left = -0.199951
margin_right = -0.799927
margin_bottom = 0.200012
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnButton" type="Button" parent="UI/TurnPanel"]
anchor_left = 0.165
anchor_top = 0.404
anchor_right = 0.843
anchor_bottom = 0.874
margin_left = -0.0887756
margin_top = -0.0110054
margin_right = 0.0572205
margin_bottom = -0.0210037
mouse_filter = 1
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="UI/TurnPanel"]
anchor_left = 0.104
anchor_top = 0.072
anchor_right = 0.907
anchor_bottom = 0.325
margin_left = -0.0720005
margin_top = 0.0240002
margin_right = -0.0510101
margin_bottom = 0.0249977
text = "Test"
valign = 1

[node name="saveMapButton" type="Button" parent="UI"]
visible = false
anchor_left = 0.478
anchor_top = 0.766
anchor_right = 0.526
anchor_bottom = 0.802
margin_left = 0.254517
margin_top = -0.267273
margin_right = -0.545471
margin_bottom = 0.332703
text = "Save Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdventureEvent" parent="UI" instance=ExtResource( 17 )]

[node name="UnitsContainer" type="HBoxContainer" parent="UI"]
anchor_left = 0.187
anchor_top = 0.878
anchor_right = 0.812
anchor_bottom = 0.978
margin_left = 0.799988
margin_top = -0.199951
margin_right = 0.800049
margin_bottom = -0.199951
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unitButton" type="Button" parent="UI/UnitsContainer"]
margin_right = 165.0
margin_bottom = 90.0
rect_min_size = Vector2( 165, 88 )
mouse_filter = 1

[node name="Sprite" type="Sprite" parent="UI/UnitsContainer/unitButton"]
texture = ExtResource( 25 )
centered = false
offset = Vector2( 0, 1 )
hframes = 2
frame = 1

[node name="ArmiesContainer" type="ScrollContainer" parent="UI"]
anchor_left = 0.019
anchor_top = 0.044
anchor_right = 0.141
anchor_bottom = 0.524
margin_left = -0.4
margin_top = 0.399998
margin_right = 0.400009
margin_bottom = 0.399933
scroll_horizontal_enabled = false
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmiesList" type="VBoxContainer" parent="UI/ArmiesContainer"]
margin_right = 192.0
margin_bottom = 106.0
rect_min_size = Vector2( 192, 106 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmyButton" type="Button" parent="UI/ArmiesContainer/ArmiesList"]
margin_right = 192.0
margin_bottom = 106.0
mouse_filter = 1
icon = ExtResource( 3 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Sprite" parent="UI/ArmiesContainer/ArmiesList/ArmyButton"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( 6, 3 )
hframes = 2

[node name="TownsContainer" type="ScrollContainer" parent="UI"]
anchor_left = 0.859
anchor_top = 0.044
anchor_right = 0.981
anchor_bottom = 0.524
margin_left = -0.400024
margin_top = 0.399998
margin_right = 0.399902
margin_bottom = 0.399994
scroll_horizontal_enabled = false
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownsList" type="VBoxContainer" parent="UI/TownsContainer"]
margin_bottom = 432.0
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownButton" type="Button" parent="UI/TownsContainer/TownsList"]
visible = false
margin_right = 192.0
margin_bottom = 106.0
mouse_filter = 1
icon = ExtResource( 3 )
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Sprite" parent="UI/TownsContainer/TownsList/TownButton"]
texture = ExtResource( 23 )
centered = false
offset = Vector2( 6, 3 )
hframes = 2

[node name="topPanel" type="Panel" parent="UI"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.067
margin_left = 3.05176e-05
margin_bottom = -0.299999
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="UI/topPanel"]
anchor_left = 0.461
anchor_top = 0.1
anchor_right = 0.539
anchor_bottom = 0.9
margin_left = 0.199951
margin_right = -0.200073
margin_bottom = -3.8147e-06
mouse_filter = 1
icon = ExtResource( 26 )

[node name="GridContainerLeft" type="GridContainer" parent="UI/topPanel"]
anchor_left = 0.006
anchor_top = 0.083
anchor_right = 0.455
anchor_bottom = 0.917
margin_left = 0.199999
margin_top = 0.0199995
margin_right = -3.05176e-05
margin_bottom = -0.0200043
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lumber" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_right = 45.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/lumber"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/lumber"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stone" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 49.0
margin_right = 94.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/stone"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/stone"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="steam" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 98.0
margin_right = 143.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/steam"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/steam"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iron" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 147.0
margin_right = 192.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/iron"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/iron"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gems" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 196.0
margin_right = 241.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/gems"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/gems"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shards" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 245.0
margin_right = 290.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/shards"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/shards"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Panel" parent="UI/topPanel/GridContainerLeft"]
margin_left = 294.0
margin_right = 339.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerLeft/gold"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerLeft/gold"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainerRight" type="GridContainer" parent="UI/topPanel"]
anchor_left = 0.545
anchor_top = 0.083
anchor_right = 0.994
anchor_bottom = 0.917
margin_left = 3.05176e-05
margin_top = 0.0199995
margin_right = -0.200012
margin_bottom = -0.0200081
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="movement" type="Panel" parent="UI/topPanel/GridContainerRight"]
margin_right = 45.0
margin_bottom = 50.0
rect_min_size = Vector2( 45, 50 )
mouse_filter = 1

[node name="icon" type="TextureRect" parent="UI/topPanel/GridContainerRight/movement"]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.7
margin_left = 0.00499916
margin_right = -0.00500488
margin_bottom = -3.8147e-06
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/topPanel/GridContainerRight/movement"]
anchor_left = 0.111
anchor_top = 0.74
anchor_right = 0.889
anchor_bottom = 1.04
margin_left = 0.00499916
margin_top = -3.8147e-06
margin_right = -0.00500488
margin_bottom = -7.62939e-06
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewDayEvent" parent="UI" instance=ExtResource( 29 )]

[node name="MouseCtrl" type="Node2D" parent="."]
visible = false
script = ExtResource( 10 )

[node name="Army" type="Node2D" parent="."]
position = Vector2( -500, -500 )
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Army"]
position = Vector2( 0, -38 )
frames = SubResource( 4 )
offset = Vector2( 0, 18 )

[node name="Tween" type="Tween" parent="Army"]

[node name="MovementTracker" type="Node2D" parent="."]
position = Vector2( -173.91, -627.709 )
script = ExtResource( 21 )

[node name="MoveTrackerEnabled" type="Sprite" parent="MovementTracker"]
visible = false
texture = ExtResource( 1 )
vframes = 5
hframes = 10

[node name="MoveTrackerDisabled" type="Sprite" parent="MovementTracker"]
visible = false
texture = ExtResource( 20 )
vframes = 5
hframes = 10

[node name="EventCtrl" type="Node2D" parent="."]
script = ExtResource( 18 )
[connection signal="mouse_entered" from="UI/saveMapName" to="MouseCtrl" method="setMouseState" binds= [ 4 ]]
[connection signal="mouse_exited" from="UI/saveMapName" to="MouseCtrl" method="setMouseState" binds= [ 0 ]]
[connection signal="mouse_entered" from="UI/TurnPanel" to="UI/TurnPanel" method="_on_TurnPanel_mouse_entered"]
[connection signal="mouse_exited" from="UI/TurnPanel" to="UI/TurnPanel" method="_on_TurnPanel_mouse_exited"]
[connection signal="pressed" from="UI/TurnPanel/TurnButton" to="UI/TurnPanel" method="_on_TurnButton_pressed"]
[connection signal="mouse_entered" from="UI/saveMapButton" to="MouseCtrl" method="setMouseState" binds= [ 4 ]]
[connection signal="mouse_exited" from="UI/saveMapButton" to="MouseCtrl" method="setMouseState" binds= [ 0 ]]
[connection signal="pressed" from="UI/saveMapButton" to="UI" method="_on_saveMapButton_pressed"]
[connection signal="mouse_entered" from="UI/ArmiesContainer" to="MouseCtrl" method="setMouseState" binds= [ 4 ]]
[connection signal="mouse_exited" from="UI/ArmiesContainer" to="MouseCtrl" method="setMouseState" binds= [ 0 ]]
[connection signal="pressed" from="UI/ArmiesContainer/ArmiesList/ArmyButton" to="UI/ArmiesContainer/ArmiesList/ArmyButton" method="_on_ArmyButton_pressed"]
[connection signal="mouse_entered" from="UI/TownsContainer" to="MouseCtrl" method="setMouseState" binds= [ 4 ]]
[connection signal="mouse_exited" from="UI/TownsContainer" to="MouseCtrl" method="setMouseState" binds= [ 0 ]]
[connection signal="mouse_entered" from="UI/topPanel" to="MouseCtrl" method="setMouseState" binds= [ 4 ]]
[connection signal="mouse_exited" from="UI/topPanel" to="MouseCtrl" method="setMouseState" binds= [ 0 ]]
